--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -64,7 +64,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=principal.Application
+main.class=principal.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
